--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
   text-align: center;
+  position: absolute;
+  font-family: 'Poppins';
+  height: 100vh;
+  width: 100vw;
+  background-color: #6e63a5;
+}
+/* Style for the container dividing the screen horizontally */
+.container {
+  margin: 200px 300px 600px 550px;
+  background-origin: padding-box;
+  border: 0.5px solid transparent;
+  background-color: #fff;
+  border-radius: 15px;
+  width: 400px;
+  height: auto; /* Change height to 'auto' to adjust based on content */
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  padding: 20px; /* Add padding for spacing */
+}
+.container p{
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Style for the email input */
+.container input{
+  border: none;
+  width: 380px;
+  background-color: #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: left;
+  margin-bottom: 2px; /* Add spacing below the input */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Style for the button */
+.container button {
+  background-color: #fff; /* Change the background color */
+  color: black; /* Change the text color */
+  width: 400px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 8px 10px;
+  cursor: pointer;
+  font-size: 15px; /* Adjust the font size */
+  margin-top: 12px;
+  margin-bottom: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container h{
+  font-size: 30px;
+  margin-top: 70px;
+  padding-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.container a{
+  padding: 40px;
+  text-decoration: none;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
